organize album data for taste profile
